// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-drip destination: identify action - all fields 1`] = `
Object {
  "email": "amjo@ka.ar",
}
`;

exports[`Testing snapshot for actions-drip destination: identify action - required fields 1`] = `
Object {
  "email": "amjo@ka.ar",
}
`;

exports[`Testing snapshot for actions-drip destination: track action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "action": "X%2wvLH",
      "email": "tocbuf@kod.bd",
      "properties": Object {
        "testType": "X%2wvLH",
      },
    },
  ],
}
`;

exports[`Testing snapshot for actions-drip destination: track action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "action": "X%2wvLH",
      "email": "tocbuf@kod.bd",
    },
  ],
}
`;
